[tool.poetry]
name = "NSFW-Editor"
version = "0.1.0"
description = "Custom video editor with tagging and timeline support"
authors = ["Chris"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
PySide6 = "^6.9.1"
python-mpv = "^1.0.8"
opentimelineio = "^0.17.0"
loguru = "^0.7.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-qt = "^4.4"
ruff = "^0.5"
black = "^24.4"
isort = "^5.13"
pre-commit = "^3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
